modified app url

--- a/index.html
+++ b/index.html
@@ -251,6 +251,11 @@ https://templatemo.com/tm-553-xtra-blog
             </footer>
         </main>
     </div>
+    <script>
+        window.onload = ()=>{
+            window.location = "https://sites.google.com/view/nyumbayo-app/home";
+        }
+        </script>
     <script src="js/jquery.min.js"></script>
     <script src="js/templatemo-script.js"></script>
 </body>
